// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser while statements nested 1`] = `
[
  While {
    "body": Block {
      "location": {
        "end": {
          "column": 12,
          "line": 8,
        },
        "file": "",
        "start": {
          "column": 26,
          "line": 2,
        },
      },
      "statements": [
        While {
          "body": Block {
            "location": {
              "end": {
                "column": 16,
                "line": 6,
              },
              "file": "",
              "start": {
                "column": 30,
                "line": 3,
              },
            },
            "statements": [
              While {
                "body": Block {
                  "location": {
                    "end": {
                      "column": 43,
                      "line": 4,
                    },
                    "file": "",
                    "start": {
                      "column": 35,
                      "line": 4,
                    },
                  },
                  "statements": [
                    Increment {
                      "token": {
                        "isReserved": false,
                        "kind": "PlusPlus",
                        "literal": undefined,
                        "location": {
                          "end": {
                            "column": 40,
                            "line": 4,
                          },
                          "file": "",
                          "start": {
                            "column": 38,
                            "line": 4,
                          },
                        },
                        "text": "++",
                      },
                      "value": Variable {
                        "name": {
                          "isReserved": false,
                          "kind": "Identifier",
                          "literal": undefined,
                          "location": {
                            "end": {
                              "column": 38,
                              "line": 4,
                            },
                            "file": "",
                            "start": {
                              "column": 37,
                              "line": 4,
                            },
                          },
                          "text": "k",
                        },
                      },
                    },
                  ],
                },
                "condition": Binary {
                  "left": Variable {
                    "name": {
                      "isReserved": false,
                      "kind": "Identifier",
                      "literal": undefined,
                      "location": {
                        "end": {
                          "column": 27,
                          "line": 4,
                        },
                        "file": "",
                        "start": {
                          "column": 26,
                          "line": 4,
                        },
                      },
                      "text": "k",
                    },
                  },
                  "right": Literal {
                    "_location": {
                      "end": {
                        "column": 34,
                        "line": 4,
                      },
                      "file": "",
                      "start": {
                        "column": 30,
                        "line": 4,
                      },
                    },
                    "value": Int32 {
                      "inArray": false,
                      "kind": 4,
                      "value": 1000,
                    },
                  },
                  "token": {
                    "isReserved": false,
                    "kind": "Less",
                    "literal": undefined,
                    "location": {
                      "end": {
                        "column": 29,
                        "line": 4,
                      },
                      "file": "",
                      "start": {
                        "column": 28,
                        "line": 4,
                      },
                    },
                    "text": "<",
                  },
                },
                "tokens": {
                  "endWhile": {
                    "isReserved": false,
                    "kind": "EndWhile",
                    "literal": undefined,
                    "location": {
                      "end": {
                        "column": 52,
                        "line": 4,
                      },
                      "file": "",
                      "start": {
                        "column": 43,
                        "line": 4,
                      },
                    },
                    "text": "end while",
                  },
                  "while": {
                    "isReserved": true,
                    "kind": "While",
                    "literal": undefined,
                    "location": {
                      "end": {
                        "column": 25,
                        "line": 4,
                      },
                      "file": "",
                      "start": {
                        "column": 20,
                        "line": 4,
                      },
                    },
                    "text": "while",
                  },
                },
              },
              Increment {
                "token": {
                  "isReserved": false,
                  "kind": "PlusPlus",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 23,
                      "line": 5,
                    },
                    "file": "",
                    "start": {
                      "column": 21,
                      "line": 5,
                    },
                  },
                  "text": "++",
                },
                "value": Variable {
                  "name": {
                    "isReserved": false,
                    "kind": "Identifier",
                    "literal": undefined,
                    "location": {
                      "end": {
                        "column": 21,
                        "line": 5,
                      },
                      "file": "",
                      "start": {
                        "column": 20,
                        "line": 5,
                      },
                    },
                    "text": "j",
                  },
                },
              },
            ],
          },
          "condition": Binary {
            "left": Variable {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 23,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 22,
                    "line": 3,
                  },
                },
                "text": "j",
              },
            },
            "right": Literal {
              "_location": {
                "end": {
                  "column": 30,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 26,
                  "line": 3,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 1000,
              },
            },
            "token": {
              "isReserved": false,
              "kind": "Less",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 25,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 24,
                  "line": 3,
                },
              },
              "text": "<",
            },
          },
          "tokens": {
            "endWhile": {
              "isReserved": false,
              "kind": "EndWhile",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 25,
                  "line": 6,
                },
                "file": "",
                "start": {
                  "column": 16,
                  "line": 6,
                },
              },
              "text": "end while",
            },
            "while": {
              "isReserved": true,
              "kind": "While",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 21,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 16,
                  "line": 3,
                },
              },
              "text": "while",
            },
          },
        },
        Increment {
          "token": {
            "isReserved": false,
            "kind": "PlusPlus",
            "literal": undefined,
            "location": {
              "end": {
                "column": 19,
                "line": 7,
              },
              "file": "",
              "start": {
                "column": 17,
                "line": 7,
              },
            },
            "text": "++",
          },
          "value": Variable {
            "name": {
              "isReserved": false,
              "kind": "Identifier",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 17,
                  "line": 7,
                },
                "file": "",
                "start": {
                  "column": 16,
                  "line": 7,
                },
              },
              "text": "i",
            },
          },
        },
      ],
    },
    "condition": Binary {
      "left": Variable {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 18,
              "line": 2,
            },
          },
          "text": "i",
        },
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": 26,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 22,
            "line": 2,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 1000,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "Less",
        "literal": undefined,
        "location": {
          "end": {
            "column": 21,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 20,
            "line": 2,
          },
        },
        "text": "<",
      },
    },
    "tokens": {
      "endWhile": {
        "isReserved": false,
        "kind": "EndWhile",
        "literal": undefined,
        "location": {
          "end": {
            "column": 21,
            "line": 8,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 8,
          },
        },
        "text": "end while",
      },
      "while": {
        "isReserved": true,
        "kind": "While",
        "literal": undefined,
        "location": {
          "end": {
            "column": 17,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 2,
          },
        },
        "text": "while",
      },
    },
  },
]
`;

exports[`parser while statements while with exit 1`] = `
[
  While {
    "body": Block {
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "file": undefined,
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "statements": [
        Print {
          "expressions": [
            Literal {
              "_location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": BrsString {
                "inArray": false,
                "kind": 3,
                "value": "looping",
              },
            },
          ],
          "tokens": {
            "print": {
              "isReserved": true,
              "kind": "Print",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "print",
            },
          },
        },
        ExitWhile {
          "tokens": {
            "exitWhile": {
              "isReserved": false,
              "kind": "ExitWhile",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "exit while",
            },
          },
        },
      ],
    },
    "condition": Literal {
      "_location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "value": BrsBoolean {
        "inArray": false,
        "kind": 2,
        "value": true,
      },
    },
    "tokens": {
      "endWhile": {
        "isReserved": false,
        "kind": "EndWhile",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end while",
      },
      "while": {
        "isReserved": true,
        "kind": "While",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "while",
      },
    },
  },
]
`;

exports[`parser while statements while without exit 1`] = `
[
  While {
    "body": Block {
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "file": undefined,
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "statements": [
        Print {
          "expressions": [
            Literal {
              "_location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": BrsString {
                "inArray": false,
                "kind": 3,
                "value": "looping",
              },
            },
          ],
          "tokens": {
            "print": {
              "isReserved": true,
              "kind": "Print",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "print",
            },
          },
        },
      ],
    },
    "condition": Literal {
      "_location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "value": BrsBoolean {
        "inArray": false,
        "kind": 2,
        "value": true,
      },
    },
    "tokens": {
      "endWhile": {
        "isReserved": false,
        "kind": "EndWhile",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end while",
      },
      "while": {
        "isReserved": true,
        "kind": "While",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "while",
      },
    },
  },
]
`;
